# btrls

./: .gitignore  Cargo.toml  README.md  install.sh
src/: config_deps.rs  dependencies.rs  file_size_deps.rs  main.rs
